--- a/SLAM/三维空间的刚体运动.md
+++ b/SLAM/三维空间的刚体运动.md
@@ -8,7 +8,7 @@
 
 ## 向量
 
-在描述旋转矩阵前我们先明确*向量*这个概念。向量是空间中的一个具体实物且**不和任何实数相关联**。为了描述向量，应该先确定一个具体的坐标系，明确该坐标系的线性基$[\mathbf{e}_1, \mathbf{e}_2, \mathbf{e}_3]$ 后才能够确定一个向量$ \mathbf{a}$在该坐标系下的坐标：
+在描述旋转矩阵前我们先明确*向量*这个概念。向量是空间中的一个具体实物且**不和任何实数相关联**。为了描述向量，应该先确定一个具体的坐标系，明确该坐标系的线性基$[\mathbf{e}_1, \mathbf{e}_2, \mathbf{e}_3]$ 后才能够确定一个向量$ \mathbf{a}$ 在该坐标系下的坐标：
 
 
 $$
@@ -123,7 +123,7 @@ $$
 $$
 \mathbf{R}\mathbf{n}=\mathbf{n}
 $$
-说明$\mathbf{n}$ 是矩阵$\mathbf{R}$ 的特征值 1 所对应的特征向量。求解后并**归一化**则可得到$\mathbf{n}$.
+说明$\mathbf{n}​$ 是矩阵$\mathbf{R}​$ 的特征值 1 所对应的特征向量。求解后并**归一化**则可得到$\mathbf{n}​$.
 
 #### 欧拉角
 
@@ -200,7 +200,7 @@ $$
    $$
    \mathbf{q}_a\mathbf{q}_b=[s_as_b-\mathbf{v}_a^T\mathbf{v}_b,\ s_a\mathbf{v}_b+s_b\mathbf{v}_a+\mathbf{v}_a \times \mathbf{v}_b]
    $$
-   该乘法定义下，两个实四元数的乘积仍然是实四元数。由于最后一项外积的存在，**四元数的乘法不满足交换律**，除非$\mathbf{v}_a$ 和$\mathbf{v}_a$ 在$R^ 3$ 中共线（此时外积为零）。
+   该乘法定义下，两个实四元数的乘积仍然是实四元数。由于最后一项外积的存在，**四元数的乘法不满足交换律**，除非$\mathbf{v}_a$ 和$\mathbf{v}_b$ 在$R^ 3$ 中共线（此时外积为零）。
 
 3. 共轭
 
