--- a/SLAM/李群和李代数.md
+++ b/SLAM/李群和李代数.md
@@ -25,7 +25,9 @@ $$
 
 ### 李群
 
-**定义**：*李群*就是具有**连续（光滑）**性质的群。前面举的整数的加法的例子显然不是连续的，因而它不是李群。但SO(3) 和SE(3) 在实数空间上是**连续**的（机器人在三维空间中显然是连续地运动，而不会进行“瞬移”）。
+**定义**：*李群*就是具有**连续（光滑）**性质的群。
+
+前面举的整数的加法的例子显然不是连续的，因而它不是李群。但SO(3) 和SE(3) 在实数空间上是**连续**的（机器人在三维空间中显然是连续地运动，而不会进行“瞬移”）。
 
 介绍完李群，在引入李代数之前，我们来回顾下开头我们提到的问题：为什么要用到李群和李代数？避免一直是数学上的推到。我们用一个比较实际的例子。假设某个时刻我们预测机器人的位姿为$\mathbf{T}$（待定值）, 它观测到了一个惯性坐标系下的点$\mathbf{p}$ 而产生了一个观测数据$\mathbf{z}$，它是该点在相机坐标系下的坐标，则可得
 $$
@@ -40,3 +42,59 @@ $$
 \mathop{\min}_{T} J(\mathbf{T})=\sum\limits^N_{i=1}||\mathbf{z}_i-\mathbf{T}\mathbf{p}_i||^2_2
 $$
 通常，直接求解上式得出最优的$\mathbf{T}$是很困难的（或计算量很大）。我们常常先给定一个猜测值（初始值）$\mathbf{T}_0$，然后不断地对它进行迭代更新。而这个过程需要用到导数（可以想想梯度下降法）。回顾导数的定义，$\dot{f(x)}=\lim_{\Delta x \to 0} \frac{f(x+\Delta x)}{\Delta x}$。显然计算导数和进行更新时都要用到加法。但SO(3) 和SE(3) 上对矩阵加法的运算并不封闭。如果要继续采取这个迭代更新的策略势必要再想想办法，使得导数“可行”。而这就可以通过李群及其对应的李代数来实现。
+
+## 李代数
+
+### 引出
+
+现在我们考虑任意的旋转矩阵$\mathbf{R}$，根据上一讲的知识，有
+$$
+\mathbf{R}\mathbf{R}^T=\mathbf{I}
+$$
+因为机器人在不断运动，所以$\mathbf{R}$ 也在随时间不断变换，引入时间$t$ 就得到$\mathbf{R}(t)$，上式也变成
+$$
+\mathbf{R}(t)\mathbf{R}(t)^T=\mathbf{I}
+$$
+等式两边一起对时间求导可得：
+$$
+\dot{\mathbf{R}}(t)\mathbf{R}(t)^T+\mathbf{R}(t)\dot{\mathbf{R}}(t)^T=0
+$$
+亦即
+$$
+\dot{\mathbf{R}}(t)\mathbf{R}(t)^T=-\mathbf{R}(t)\dot{\mathbf{R}}(t)^T=-(\dot{\mathbf{R}}(t)\mathbf{R}(t)^T)^T
+$$
+一个矩阵等于其自身转置后取负号，可知$\dot{\mathbf{R}}(t)\mathbf{R}(t)^T$ 是一个**反对称矩阵**。我们之前就介绍过反对称矩阵和^ 符号，可知对应地，对于任意的反对称矩阵，可以找到一个与之对应的向量，这个关系可以用$^\vee$ 来表示：
+$$
+\mathbf{a}^\wedge=\mathbf{A}=
+\begin{bmatrix}
+0 & -a_3 & a_2 \\
+a_3 & 0 & -a_1 \\
+-a_2 & a_1 & 0 \\
+\end{bmatrix}
+, \ \ \mathbf{A}^\vee=\mathbf{a}
+$$
+设这个对应的向量为$\phi(t)\in R^3$，就有
+$$
+\dot{\mathbf{R}}(t)\mathbf{R}(t)^T=\phi(t)^\wedge
+$$
+等式两边同时右乘$\mathbf{R}(t)$ 则有
+$$
+\dot{\mathbf{R}}(t)=\phi(t)^\wedge\mathbf{R}(t)
+$$
+从式(11) 可以看到，每对旋转矩阵求一次导数，只需要左乘一个$\phi(t)^\wedge$ 就可以了。假设t~0~ = 0 并设此时$\mathbf{R}(0)=\mathbf{I}$，对式(10) 进行一阶泰勒展开就有：
+$$
+\mathbf{R}(t) \approx \mathbf{R}(t_0)+\dot{\mathbf{R}}(t_0)(t-t_0)=\mathbf{I}+\phi(t_0)^\wedge \cdot (t)
+$$
+**NOTE**：$\phi$ 反应了$\mathbf{R}$ 的导数的性质，故称它在SO(3) 原点附近的正切空间（Tangent Space）上。
+
+同时，在t~0~ 附近，设$\phi$ 也是一个常数，即$\phi(t_0)=\phi_0$，根据式(11) 就有
+$$
+\dot{\mathbf{R}}(t)=\phi(t_0)^\wedge\mathbf{R}(t)=\phi_0^\wedge\mathbf{R}(t)
+$$
+显然，上式是一个关于$\mathbf{R}$ 的微分方程，而且知道初始值$\mathbf{R}(0)=\mathbf{I}$，他的解为
+$$
+\mathbf{R}(t)=\exp (\phi_0^\wedge t)
+$$
+由于我们之前做了一些假设，所以这个式子只在t **附近有效**。
+
+但通过式(14) 我们知道，**当某个时刻的$\mathbf{R}$ 已知时，存在一个向量$\phi$，二者满足这个矩阵指数关系** 。而这个$\phi$，就是对应到SO(3) 上的李代数so(3)。
