--- a/MachineLearning/3线性模型.md
+++ b/MachineLearning/3线性模型.md
@@ -20,9 +20,11 @@ $$
 
 ## 线性回归
 
-**定义**：给定数据集 $D=\{ (\mathbf{x_1}, y_1), (\mathbf{x_2}, y_2), …, (\mathbf{x_3}, y_3)\}$，"线性回归" (linear regression)试图学得一个线性模型以尽可能准确地预测实值输出标记.
+### 闭式解的方式
 
-**NOTE**：对于离散属性，若属性值间存在"序" (order)关系，可通过连续化将其转化为连续值；若属性值间不存在序关 系，假定有 k 个属性值，则通常转化为 k 维二值向量。
+**定义**：给定数据集 $D=\{ (\mathbf{x_1}, y_1), (\mathbf{x_2}, y_2), …, (\mathbf{x_3}, y_3)\}$，"线性回归" (linear regression)试图学得一个线性模型，通过对输入的特征进行加权求和和一个bias term 来尽可能准确地预测实值输出标记.
+
+**NOTE**：对于离散属性，若属性值间存在"序" (order)关系，可通过连续化将其转化为连续值；若属性值间不存在序关系，假定有 k 个属性值，则通常转化为 k 维二值向量。
 
 **目标**：$f(x_i)=\omega_ix_i+b$ 使得 $f(x_i) \approx y_i$
 
@@ -53,6 +55,41 @@ $$
 f(\hat x_i)=\hat x_i^T(\mathbf{X}^T \mathbf{X})^{-1}\mathbf{X}^T \mathbf{y}
 $$
 对于非满秩的情况，最常见的接发则是引入正则化（regularization）项。
+
+上式的计算复杂度为 O(n^2.4^) 到 O(n^3^). 它的好处是对训练集内的数据量大小（m）是线性呢。只要内存能够放下，闭式解可以**高效地处理大数据集**。但对于特征多的数据（n维向量）,n*n 大小矩阵的求逆则太过费时。
+
+### 梯度下降法
+
+梯度下降法的**思想**就是不断**迭代调整参数使得代价函数最终达到最小**。
+
+![屏幕快照 2018-01-15 11.34.10](../../../Downloads/屏幕快照 2018-01-15 11.34.10.png)
+
+其中一个重要的参数就是**学习率**，它决定了迭代时的步长。如果学习率太小，则可能收敛速度太慢；若学习率太大，则可能造成震荡。
+
+![屏幕快照 2018-01-15 11.40.41](../../../Downloads/屏幕快照 2018-01-15 11.40.41.png)
+
+![屏幕快照 2018-01-15 11.40.53](../../../Downloads/屏幕快照 2018-01-15 11.40.53.png)
+
+对于梯度下降法，有两个主要的**问题**：
+
+- 收敛到局部最小值；
+- 可能在某一处平坦的“高原”上不断地迭代而无法到达全局最小值。
+
+![屏幕快照 2018-01-15 11.43.52](../../../Downloads/屏幕快照 2018-01-15 11.43.52.png)
+
+但是，对于线性回归来说，其代价函数（均方误差(MSE)）是一个凸函数，这就意味着它**只有一个全局最小值而没有局部最小值**。而且，它是一个连续函数，即它的斜率不会突然变化。这就保证了梯度下降法可以任意逼近全局最小值。
+
+在使用梯度下降法还需要注意的一点是**all features should have a similar scale**。
+
+![屏幕快照 2018-01-15 11.54.20](../../../Downloads/屏幕快照 2018-01-15 11.54.20.png)
+
+上图的左图中，feature 1 和 feature 2 具有相同的规模(scale)；而在右图中，feature 1 的规模比feature 2 小（因为在右图中，it takes a large change in $\theta_1$ to affect the cost function, which is why the bowl is elongated along the $\theta_1$ axis.
+
+最后，梯度下降法也反映出训练一个模型就是**searching for a combination of model parameters 来最小化代价函数**。这个查找是在**模型的参数空间**中进行的：一个模型的参数越多，它的参数空间的维度就越大，而查找显然就更费时。
+
+#### 批量梯度下降
+
+要使用梯度下降法，需要计算**代价函数相对于每个参数$\theta_i$ 的导数**。
 
 线性模型虽简单，却有丰富的变化。譬如说，假设我们认为示例所对应的输出标记是在指数尺度上变化，那就可将输出标记的对数作为线性模型逼近的目标， 即
 $$
