--- a/MachineLearning/3线性模型.md
+++ b/MachineLearning/3线性模型.md
@@ -91,6 +91,64 @@ $$
 
 要使用梯度下降法，需要计算**代价函数相对于每个参数$\theta_i$ 的导数**。
 
+均方误差的**定义**为：
+$$
+MSE(\mathbf{X}, h_\theta)=\frac{1}{m}\sum\limits_{i=1}^m(\theta ^T\cdot x^{(i)}-y^{(i)})^2
+$$
+对$\theta_j$ 求导数可得
+$$
+\frac{\partial}{\partial \theta_j}MSE(\theta)=\frac{2}{m}\sum\limits_{i=2}^m(\theta^T\cdot x^{(i)}-y^{(i)})x_j^{(i)}
+$$
+若我们一次性对所有的参数进行求导，则可得到*梯度向量*(gradient vector) $\nabla_\theta MSE(\theta)$:
+$$
+\nabla_\theta=\begin{pmatrix}
+\frac{\partial}{\partial \theta_0}MSE(\theta) \\
+\frac{\partial}{\partial \theta_1}MSE(\theta) \\
+\vdots \\
+\frac{\partial}{\partial \theta_n}MSE(\theta)
+\end{pmatrix}
+=\frac{2}{m}\mathbf{X}^T\cdot (\mathbf{X}\cdot\theta-\mathbf{y})
+$$
+注意到利用这个式子做梯度下降在计算时使用了**整个数据集**。所以，当数据集很大时，批量梯度下降会很慢。
+
+利用梯度向量，每次迭代时只需向**梯度方向的反方向**优化即可（$\eta$ 为学习率）：
+$$
+\theta^{(next\ step)}=\theta - \eta\nabla_\theta MSE(\theta)
+$$
+为了找到合适的学习率，我们可以使用网格搜索（grid search）。另一个比较好平衡计算的方法是**设定较大的迭代次数，但一旦梯度向量小于某个常量则跳出循环**。
+
+#### 随机梯度下降
+
+*随机梯度下降*在每次迭代过程中只选取训练集中的某一个实例利用式(8) 来计算梯度并完成更新。
+
+但随机梯度下降的**问题**是：它每次迭代代价函数都有可能走高或走低，**decreasing only on average**. 且当迭代停止是，有可能并不会停在最低点上而是在其附近。
+
+![屏幕快照 2018-01-16 20.34.30](../../../Downloads/屏幕快照 2018-01-16 20.34.30.png)
+
+但其**优点**是：当代价函数不规则时，随机梯度下降会帮它跳出局部最小值。
+
+解决的**办法**就是：逐步减小学习率。这就是**模拟退火**算法：一开始时使用较大的迭代步长（来加快进度和跳出局部最小值），然后不断减小学习率以减小迭代步长，保证算法可以 settle at the global minimum.
+
+而用来计算学习率的函数就称为*learning schedule*.
+
+随机梯度下降的**另一个问题**就是其选取数据的随机性：这导致有些数据会被选取好几次而**有些数据从来用不到**。**解决办法**就是每次选取前都**对数据集进行“洗牌”**。
+
+#### Mini-batch Gradient Descent
+
+Mini-batch gradient descent是前两者的结合：每次选取一个**小的随机数据集**来计算梯度向量。**好处**之一就是能够充分利用GPU等硬件提供的资源来优化矩阵计算。
+
+### 多项式回归
+
+当简单的线性模型无法满足要求时，可以考虑**对数据集进行处理**。将数据中的每个特征的**高次项**作为**新的特征**加入到数据中。再利用这些数据来训练一个模型。
+
+除了能够**拟合复杂的模型**之外，多项式回归还可以找到**特征之间的联系**。因为 polynomialFeatures also adds all combinations of features up to the given degree. 利用找到的参数就可以审视数据中特征间的联系。
+
+但**缺点**就是特征空间**维度爆炸**：*PolynomialFeatures(degree = n)* transforms an array containing *n* features into an array containing $\frac{(n+d)!}{d!n!}$ features.
+
+#### 学习曲线（learning curve）
+
+
+
 线性模型虽简单，却有丰富的变化。譬如说，假设我们认为示例所对应的输出标记是在指数尺度上变化，那就可将输出标记的对数作为线性模型逼近的目标， 即
 $$
 ln\ y=\mathbf{\omega}^T \mathbf{x}+b
