--- a/SLAM/李群和李代数.md
+++ b/SLAM/李群和李代数.md
@@ -97,4 +97,45 @@ $$
 $$
 由于我们之前做了一些假设，所以这个式子只在t **附近有效**。
 
-但通过式(14) 我们知道，**当某个时刻的$\mathbf{R}$ 已知时，存在一个向量$\phi$，二者满足这个矩阵指数关系** 。而这个$\phi$，就是对应到SO(3) 上的李代数so(3)。
+但通过式(14) 我们知道，**当某个时刻的$\mathbf{R}$ 已知时，存在一个向量$\phi$，二者满足这个矩阵指数关系** 。而这个$\phi$，就是对应到SO(3) 上的李代数so(3)。下面我们就介绍一下李代数的定义和如何计算矩阵指数$\exp(\phi^{\wedge})$.
+
+### 李代数的定义
+
+每个李群都有与之对应的李代数。**李代数描述了李群的局部性质**。其**定义**为：李代数由一个集合$V$, 一个数域$F$ 和一个二元运算$[,]$, 组成。如果它们满足以下几条性质，则称$(V, F, [,])$, 记作g。
+
+- 封闭性：$\forall \mathbf{X}, \mathbf{Y} \in V,\ [\mathbf{X}, \mathbf{Y}] \in V$.
+- 双线性：$\forall \mathbf{X}, \mathbf{Y}, \mathbf{Z} \in V,\ a, b \in F$, 有$[a\mathbf{X}+b\mathbf{Y},\ \mathbf{Z}]=a[\mathbf{X}, \mathbf{Z}]+[\mathbf{Y}, \mathbf{Z}],\ [\mathbf{Z},a\mathbf{X}+b\mathbf{Y}]=a[\mathbf{Z},\mathbf{X}]+b[\mathbf{Z},\mathbf{Y}]$
+- 自反性：$\forall \mathbf{X} \in V,\ [\mathbf{X}, \mathbf{X}]=\mathbf{0}$.
+- 雅可比等价：$\forall \mathbf{X},\mathbf{Y},\mathbf{Z} \in V,\ [\mathbf{X},[\mathbf{Y},\mathbf{Z}]]+[\mathbf{Z},[\mathbf{X},\mathbf{Y}]]+[\mathbf{Y},[\mathbf{Z},\mathbf{X}]]=\mathbf{0}$.
+
+其中的二元运算$[,]$ 称为**李括号**，它**表达了两个元素的差异**。三维向量R^3^ 上定义的叉积就是一种李括号，$g=(R^3,R,\times)$ 就构成了李代数。
+
+### 李代数so(3)
+
+之前我们提到的SO(3) 对应的向量$\phi$ 就是一种李代数，是定义在R^3^ 上的向量。它的反对称矩阵记为$\mathbf{\Phi}=\phi^\wedge$. 在定义下面，两个向量$\phi_1, \phi_2$ 的李括号为：
+$$
+[\phi_1, \phi_2]=(\mathbf{\Phi_1}\mathbf{\Phi_2}-\mathbf{\Phi_2}\mathbf{\Phi_1})^\vee
+$$
+高翔在书中没有明说，但经过计算可以得到结果为$\phi_1, \phi_2$ 的叉积（又叫外积）。所以这里我猜测so(3) 对应的李括号为三维向量R^3^ 上的叉积。
+$$
+so(3)=\{\phi \in R^3,\ \mathbf{\Phi}=\phi^\wedge \in R^{3\times 3}\}
+$$
+至此，我们已经清楚了so(3) 的内容：它们是一个由三维向量组成的集合；每个向量对应到一个反对称矩阵；（李括号为三维向量的外积运算）；可以用来表达旋转矩阵的导数，和SO(3) 的关系由指数映射给定：$\mathbf{R}=\exp (\phi^\wedge)$.
+
+下面我们先看李代数se(3) 再来解释指数映射。
+
+### 李代数se(3)
+
+对于SE(3)，它也有对应的李代数se(3)。和so(3) 类似，se(3) 在R^6^ 空间中：
+$$
+se(3)=\begin{Bmatrix}
+\mathbf{\xi}=\begin{bmatrix} \mathbf{\rho} \\ \mathbf{\phi} \end{bmatrix} \in R^6,\mathbf{\rho} \in R^3, \mathbf{\phi} \in so(3), \mathbf{\xi}^\wedge=\begin{bmatrix}\phi^\wedge & \mathbf{\rho} \\ \mathbf{0}^T & 0 \end{bmatrix} \in R^{4 \times 4}
+\end{Bmatrix} 
+$$
+把每个se(3) 元素记做$\xi$，它是一个六维向量：前三维为平移，记作$\rho$；后三维是旋转，记作$\phi$，实质上是s0(3) 元素。此外，在se(3) 中，$^\wedge$ 符号的含义被拓展了：这里它将一个六维向量转换为四维矩阵，但这里不再表示反对称矩阵。
+
+同样，李代数se(3) 也有类似的李括号：
+$$
+[\xi_1,\ \xi_2]=(\xi_1^\wedge \xi_2^\wedge - \xi_2^\wedge\xi_1^\wedge)^\vee
+$$
+##指数和对数映射
