--- a/SLAM/李群和李代数.md
+++ b/SLAM/李群和李代数.md
@@ -139,3 +139,83 @@ $$
 [\xi_1,\ \xi_2]=(\xi_1^\wedge \xi_2^\wedge - \xi_2^\wedge\xi_1^\wedge)^\vee
 $$
 ##指数和对数映射
+
+### SO(3) 上的指数映射
+
+如前所述，李代数到李群是一个指数映射。现在来看看指数映射是如何计算的。
+
+任意矩阵的指数映射都可以写成一个泰勒展开。但要**注意**的是展开式只有在收敛的情况下才有解，其结果仍然是一个矩阵。所以，对so(3) 中的元素$\phi$，其指数映射可以写成：
+$$
+\exp(\phi^\wedge)=\sum\limits_{n=0}^\infty \frac{1}{n!}(\phi^\wedge)^n
+$$
+将$\phi$ 记为$\theta \mathbf{a}$，并利用其性质：(偶次项) $\mathbf{a}^\wedge \mathbf{a}^\wedge=\mathbf{a}\mathbf{a}^T-\mathbf{I}$，(奇次项) $\mathbf{a}^\wedge \mathbf{a}^\wedge \mathbf{a}^\wedge=-\mathbf{a}^\wedge$ 可得：
+$$
+\exp{\phi^\wedge}=\exp(\theta \mathbf{a})=\sum\limits_{n=0}^\infty \frac{1}{n!}(\theta \mathbf{a}^\wedge)^n \\
+=\cos\theta\mathbf{I}+(1-\cos\theta)\mathbf{a}\mathbf{a}^T+\sin\theta\mathbf{a}^T
+$$
+回想前一讲，可以发现式(20) 和罗德里格斯公式有着相同的形式。这表明so(3) 实际上就是**由旋转向量组成的空间，而指数映射就是罗德里格斯公式**。也可以定义一个对数映射，将SO(3) 映射到so(3)上：
+$$
+\phi=\ln(R)^\vee=(\sum\limits_{n=0}^\infty\frac{(-1)^n}{n+1}(\mathbf{R}-\mathbf{I})^{n+1})^\vee
+$$
+但上式太过复杂了。通常我们会用前一讲介绍的旋转向量到旋转矩阵的方式来计算旋转矩阵。
+
+**NOTE**：指数映射是一个**满射**，即对每个SO(3) 中的元素都可以找到一个so(3) 的元素与之对应；但存在多个so(3) 元素对应到同一个SO(3) 上（一个旋转角为$\theta$ 的旋转向量多旋转一周得到的结果显然是一样的）。如果把**旋转角固定在$\pm \pi$ 或者$[0,2\pi]$ 之间**，那么李群和李代数中的元素就是**一一对应**的。
+
+### SE(3) 上的指数映射
+
+SE(3) 上的指数映射推导原理与SO(3) 类似，但更复杂。这里直接给出结论：
+$$
+\exp(\xi^\wedge)=
+\begin{bmatrix}
+\sum\limits_{n=0}^\infty\frac{1}{n!}(\phi^\wedge)^n & \sum\limits_{n=0}^\infty\frac{1}{(n+1)!}(\phi^\wedge)^n\rho \\
+\mathbf{0}^T & 1 \\
+\end{bmatrix}=
+\begin{bmatrix}
+\mathbf{R} & \mathbf{J}\rho \\
+\mathbf{0}^T & 1 \\
+\end{bmatrix}=\mathbf{T}
+$$
+显然，$\exp(\xi^\wedge)$ 的左上角是SO(3) 中的元素$\mathbf{R}$，是其旋转部分。而矩阵$\mathbf{J}$ 则为：
+$$
+\mathbf{J}=\frac{\sin\theta}{\theta}\mathbf{I}+(1-\frac{\sin\theta}{\theta})\mathbf{a}\mathbf{a}^T+\frac{1-\cos\theta}{\theta}\mathbf{a}^\wedge
+$$
+式(23) 与罗德里格斯公式相似。$\xi$ 中的平移部分$\rho$ 经过指数变换后，发生了一次**以$\mathbf{J}$ 为系数的线性变换**。
+
+相反的，SE(3) 到se(3) 也有对应的对数映射。但一般先利用左上角的旋转矩阵计算出旋转向量；对右上角的平移向量$\mathbf{t}$ 则有：
+$$
+\mathbf{t}=\mathbf{J}\rho
+$$
+即可得到$\rho$。
+
+## 李代数求导与扰动模型
+
+至此，我们已经介绍完了李群号李代数还有它们之间的对应关系。但最后还有一个问题。我们知道，对于两次连续的旋转可以用矩阵乘法来描述，但用李代数如何表示呢？我们自然是希望李群中两个矩阵相乘对应李代数上对应元素的相加，这样我们才能够利用加法来计算导数和进行更新。但很遗憾，这是不成立的。
+
+两个李代数指数映射的乘积，由BCH 公式给出：
+$$
+\ln(\exp(\mathbf{A})\exp(\mathbf{B}))=\mathbf{A}+\mathbf{B}+\frac{1}{12}[\mathbf{A},\mathbf{B}]+\frac{1}{12}[\mathbf{A},[\mathbf{A},\mathbf{B}]]-\frac{1}{12}[\mathbf{B},[\mathbf{A},\mathbf{B}]]+\ldots
+$$
+其中，$[,]$ 为李括号。可以看到，两个矩阵指数的乘积是两个矩阵之和再加上一些由李括号组成的余项。
+
+想象下机器人的运动，连续两帧间相机的位姿变化是一个小量；在优化过程中，通过求导而得到的更新量也是一个小量。更具体地，考虑SO(3) 上的李代数$\ln(\exp(\phi^\wedge_1)\exp(\phi^\wedge_2))^\vee$，当$\phi_1$ 或者$\phi_2$ 为小量时，显然，小量二次以上的项都可以忽略。此时，BCH 的线性近似为：
+$$
+\ln(\exp(\phi^\wedge_1)\exp(\phi^\wedge_2))^\vee \approx 
+\begin{cases}
+\mathbf{J}_l(\phi_2)^{-1}\phi_1 + \phi2,\ 当\phi_1 为小量,\\
+\mathbf{J}_r(\phi_1)^{-1}\phi_2+\phi_1,\ 当\phi_2 为小量,\\
+\end{cases}
+$$
+**解释**：以第一个式子为例，当对一个旋转矩阵$\mathbf{R_2}$，对应李代数为$\phi_2$，**左乘**一个微小的旋转$\mathbf{R}_1$ (李代数为$\phi_1$) 时，对应的李代数间的关系可以近似为原有的李代数$\phi_2$ **加上**一项$\mathbf{J}_l(\phi_2)^{-1}\phi_1$。同理，第二个式子则描述了右乘的情况。所以，在使用BCH 近似公式时必须**分清楚是左乘模型还是右乘模型**。
+
+对于左乘BCH 近似模型，雅可比矩阵$\mathbf{J}_l$ 就是式(23) 中的内容：
+$$
+\mathbf{J}_l=\mathbf{J}=\frac{\sin\theta}{\theta}\mathbf{I}+(1-\frac{\sin\theta}{\theta})\mathbf{a}\mathbf{a}^T+\frac{1-\cos\theta}{\theta}\mathbf{a}^\wedge
+$$
+它的逆为：
+$$
+\mathbf{J}_l^{-1}=\frac{\theta}{2}\cot\frac{\theta}{2}\mathbf{I}+(1-\frac{\theta}{2}\cot\frac{\theta}{2})\mathbf{a}\mathbf{a}^T-\frac{\theta}{2}\mathbf{a}^\wedge
+$$
+对于右乘模型，右乘雅可比矩阵就是将左乘雅可比的自变量取负号：
+$$
+\mathbf{J}_r(\phi)=\mathbf{J}_l(-\phi)
+$$
