--- a/SLAM/李群和李代数.md
+++ b/SLAM/李群和李代数.md
@@ -189,6 +189,8 @@ $$
 
 ## 李代数求导与扰动模型
 
+###李群和李代数在计算上的对应关系
+
 至此，我们已经介绍完了李群号李代数还有它们之间的对应关系。但最后还有一个问题。我们知道，对于两次连续的旋转可以用矩阵乘法来描述，但用李代数如何表示呢？我们自然是希望李群中两个矩阵相乘对应李代数上对应元素的相加，这样我们才能够利用加法来计算导数和进行更新。但很遗憾，这是不成立的。
 
 两个李代数指数映射的乘积，由BCH 公式给出：
@@ -219,3 +221,31 @@ $$
 $$
 \mathbf{J}_r(\phi)=\mathbf{J}_l(-\phi)
 $$
+小结一下，假设有某个旋转$\mathbf{R}$，对应的李代数为$\phi$。对它左乘一个微小旋转，记作$\Delta\mathbf{R}$，对应的李代数为$\Delta\phi$。那么，在李群上，得到的结果就是$\Delta\mathbf{R}\cdot\mathbf{R}$。而在李代数上，为$\mathbf{J}_l(\phi)^{-1}\Delta\phi+\phi$，即
+$$
+\exp(\Delta\phi^\wedge)\exp(\Delta\phi^\wedge)=\exp((\phi+\mathbf{J}_l(\phi)^{-1}\Delta\phi)^\wedge)
+$$
+反之，如果我们在李代数上进行加法，让$\phi$ 加上$\Delta\phi$，那么可以近似为李群上带左/右雅可比矩阵的乘法：
+$$
+\exp((\phi+\Delta\phi)^\wedge)=\exp((\mathbf{J}_l\Delta\phi)^\wedge)\exp(\phi^\wedge)=\exp(\phi^\wedge)\exp((\mathbf{J}_r\Delta\phi)^\wedge)
+$$
+同样地，对于SE(3)，也有类似的BCH近似公式：
+$$
+\begin{align}
+\exp(\Delta\xi^\wedge)\exp(\xi^\wedge)\approx\exp((\cal{J}_l^{-1}\Delta\xi+\xi)^\wedge) \\
+\exp(\xi^\wedge)\exp(\Delta\xi^\wedge)\approx\exp((\cal{J}_r^{-1}\Delta\xi+\xi)^\wedge)
+\end{align}
+$$
+这里$\cal{J}$ 是一个6*6 的矩阵，形式较为复杂且在实际计算中并不用到改矩阵，所以略去其具体形式。
+
+回顾介绍李群时举的那个例子。现在我们有了李代数，which 具有良好的加法运算。因此，我们可以用它来解决求导问题了。具体的**思路**有两种：
+
+1. 用**李代数**来表示**位姿**，根据李代数加法来对李代数进行求导；
+2. 利用**李群**来左乘或者右乘微小扰动，在对这个扰动的李代数进行求导。
+
+### 李代数求导模型
+
+### 扰动模型
+
+
+
