--- a/MachineLearning/3线性模型.md
+++ b/MachineLearning/3线性模型.md
@@ -147,7 +147,81 @@ Mini-batch gradient descent是前两者的结合：每次选取一个**小的随
 
 #### 学习曲线（learning curve）
 
+**过拟合**：模型在**训练集**上表现**优异**但在**测试集**上表现很差（**泛化能力差**）；
 
+**欠拟合**：模型在训练集和测试集上表现都不好。
+
+**学习曲线**：判断模型是欠拟合还是过拟合。将**训练集大小**作为自变量，将模型在训练集和测试集上的表现作为函数。**实现**：划分好测试集和训练集。用不同大小的训练集（1到全部）训练模型，然后画出模型在训练集和测试集上的表现。
+
+![屏幕快照 2018-01-20 16.18.53](../../../Downloads/屏幕快照 2018-01-20 16.18.53.png)
+
+上图就是以RMSE为评判标准，不同大小的训练集训练出的模型在训练集和测试集上的表现。
+
+*训练集的错误从0 增加到一定程度就不再增加；测试集错误减少到一定程度也不在减少*。
+
+上图是一个**欠拟合模型**，因为**测试集和训练集到最终错误都很高**。**注意**到：**欠拟合不在于数据不够**，而在于所选模型的**学习能力**低下或者**所选特征**不好。
+
+![overfitting_learning_curves_plot](../../../Downloads/overfitting_learning_curves_plot.png)
+
+而这幅图是个**过拟合模型**，训练集和测试集的RMSE 够低，但是**二者之间有巨大的差距**，说明模型在训练集上表现很好但在测试集上表现很差。
+
+下面这幅图就是选用了对的模型，**因为训练集和测试集的误差都足够小且差距不大**。
+
+![learning_curves_plot](../../../Downloads/learning_curves_plot.png)
+
+## 正则化线性回归
+
+减轻过拟合的方法之一就是**引入正则化项**：自由度越低，模型越难以过拟合。对于线性模型，**正则化会限制模型的权重**。
+
+### 岭回归（Ridge Regression）
+
+岭回归的对代价函数加上了一个正则化项$\alpha\sum_{i=1}^n\theta_i^2$。这就要求模型不仅要拟合数据，还要**尽力减小权重向量的大小**。**注意**：正则化项只在**训练**的时候加入到代价函数中。而$\alpha$ 由**用户定义**，来**控制正则化程度**，为0 则为普通的线性模型。
+
+代价函数为：
+$$
+J(\theta)=MSE(\theta)+\alpha\frac{1}{2}\sum\limits_{i=1}^n\theta_i^2
+$$
+注意到bias term $\theta_0$ **不参与正则化**。令$\omega=[\theta_1, \theta_2,\ \ldots,\theta_n]$，正则化项就是$\omega$ 的l~2~ 范数 (l~2~ norm)。若要执行**批量梯度下降**，对式(9) 加入$\alpha\omega$ 即可。对于**随机梯度下降**，剃度为：
+$$
+gradient=2\mathbf{x}_i^T(\mathbf{x}_i^T\theta - y_i)+\alpha\theta_i
+$$
+而闭式解为：
+$$
+\hat\theta=(\mathbf{X^T}\mathbf{X}+\alpha\mathbf{A})^{-1}\mathbf{X}^T\mathbf{y}
+$$
+其中，$\mathbf{A}$ 为第一个元素为零的n*n 大小的单位矩阵。
+
+**NOTE**：在进行正则化之前，必须**scale the data**（调整数据对尺度）.
+
+### Lasso
+
+Lasso 回归利用了模型参数向量的l~1~ 范数。其代价函数为：
+$$
+J(\theta)=MSE(\theta)+\alpha\sum\limits_{i=1}^n|\theta_i|
+$$
+Lasso 倾向于**彻底消除**不重要特征的权重系数，它**自动**执行了**特征选择**并输出一个**稀疏模型**。
+
+注意到Lasso 的代价函数在任意$\theta_i=0$ 处不可微。对于梯度下降，我们利用一个subgradient vector g:
+$$
+g(\theta, J)=\nabla_\theta MSE(\theta)+\alpha\begin{pmatrix}sign(\theta_1)\\ sign(\theta_2)\\ \vdots\\ sign(\theta_n)\end{pmatrix},\ where\ sign(\theta_i)=\begin{cases}-1,\ \theta_i<0\\ 0,\ \theta_i=0\\ +1,\ \theta_i > 0\end{cases}
+$$
+
+### Elastic Net
+
+Elastic Net 是岭回归和Lasso 的**结合**。其正则化项是模型权重系数l~1~ 范数和l~2~ 范数的**混合**且可以控制其混合率r。代价函数为：
+$$
+J(\theta)=MSE(\theta)+r\cdot\alpha\sum\limits_{i=1}^n|\theta_i|+\frac{1-r}{2}\alpha\sum\limits_{i=1}^n\theta_i^2
+$$
+
+### 早停
+
+另一个避免过拟合的方法是**早停**：当测试集的错误率取得最小值时停止迭代训练。
+
+![屏幕快照 2018-01-20 17.53.48](../../../Downloads/屏幕快照 2018-01-20 17.53.48.png)
+
+可以在训练时对比epoch完成后的validation error 和当前最小的validation error并记录对应的模型参数。当我们确定训练足够（继续下去不会再有减小）时就可跳出训练并以validation error 最小的模型作为最佳模型。
+
+## 对数几率回归
 
 线性模型虽简单，却有丰富的变化。譬如说，假设我们认为示例所对应的输出标记是在指数尺度上变化，那就可将输出标记的对数作为线性模型逼近的目标， 即
 $$
@@ -157,9 +231,7 @@ $$
 
 更一般地，考虑单调可微函数 g，令 $y=g^{-1}(\mathbf{\omega}^T \mathbf{x} + b)$. 即可得到*广义线性模型*（generalized linear model）。而 g 称为*联系函数*（link function）。
 
-## 对数几率回归
-
-前一节讨论了利用线性模型进行回归学习。但若要进行分类任务，则可利用广义线性模型：利用一个**单调可微**的函数将真实标记y 和线性回归模型的预测值联系起来。
+普通线性模型用于**回归**。若要进行**分类**任务，则可利用广义线性模型：利用一个**单调可微**的函数将真实标记y 和线性回归模型的预测值联系起来。
 
 考虑二分类任务，显然，输出标记$y \in \{0, 1\}$. 而线性模型的预测值z 是一个实值。所以我们需要将实值z 转换为0/1 值。最理想的当然是**单位阶跃函数**。
 $$
@@ -203,9 +275,8 @@ p(y=0\ |\ \mathbf{x})=\frac{1}{1+e^{\mathbf{\omega}^T\mathbf{x}+b}}
 $$
 我们可以通过**极大似然法**（maximum likelihood）来对参数进行估计。给定数据集$\{(\mathbf{x}_i,\ y_i)\}^m_{i=1}$, 对率回归模型最大化*对数似然*：
 $$
-l(\mathbf{\omega},b)=\sum\limits_{i=1}^m\ln p(y_i|\ \mathbf{x};\ \mathbf{\omega},b)
+l(\mathbf{\omega},b)=\sum\limits_{i=1}^m\ln p(y_i|\ \mathbf{x};\ \mathbf{\omega},b)即**令每个样本属于其真实标记的概率越大越好**。记$\mathbf{\beta}=(\mathbf{\omega};b),\hat{\mathbf{x}}=(\mathbf{x};\ 1)$, z 就可以写成$\mathbf{\beta}^T \hat{\mathbf{x}}$. 式10 中的似然项可以写成
 $$
-即**令每个样本属于其真实标记的概率越大越好**。记$\mathbf{\beta}=(\mathbf{\omega};b),\hat{\mathbf{x}}=(\mathbf{x};\ 1)$, z 就可以写成$\mathbf{\beta}^T \hat{\mathbf{x}}$. 式10 中的似然项可以写成
 $$
 p(y_i|\ \mathbf{x};\ \mathbf{\omega},b)=y_ip_1(\hat{\mathbf{x}}_i;\mathbf{\beta})+(1-y_i)p_0(\hat{\mathbf{x}}_i;\mathbf{\beta})
 $$
