--- a/MachineLearning/3线性模型.md
+++ b/MachineLearning/3线性模型.md
@@ -64,7 +64,7 @@ $$
 
 ![屏幕快照 2018-01-15 11.34.10](../../../Downloads/屏幕快照 2018-01-15 11.34.10.png)
 
-其中一个重要的参数就是**学习率**，它决定了迭代时的步长。如果学习率太小，则可能收敛速度太慢；若学习率太大，则可能造成震荡。
+其中一个重要的参数就是**学习率**，它决定了迭代时的步长。*如果学习率太小，则可能收敛速度太慢；若学习率太大，则可能造成震荡*。
 
 ![屏幕快照 2018-01-15 11.40.41](../../../Downloads/屏幕快照 2018-01-15 11.40.41.png)
 
@@ -77,7 +77,10 @@ $$
 
 ![屏幕快照 2018-01-15 11.43.52](../../../Downloads/屏幕快照 2018-01-15 11.43.52.png)
 
-但是，对于线性回归来说，其代价函数（均方误差(MSE)）是一个凸函数，这就意味着它**只有一个全局最小值而没有局部最小值**。而且，它是一个连续函数，即它的斜率不会突然变化。这就保证了梯度下降法可以任意逼近全局最小值。
+对于线性回归来说，其代价函数（均方误差(MSE)）是
+
+- 凸函数，这就意味着它**只有一个全局最小值而没有局部最小值**。
+- 连续函数，即它的斜率不会突然变化。这就保证了梯度下降法可以任意逼近全局最小值。
 
 在使用梯度下降法还需要注意的一点是**all features should have a similar scale**。
 
@@ -99,7 +102,7 @@ $$
 $$
 \frac{\partial}{\partial \theta_j}MSE(\theta)=\frac{2}{m}\sum\limits_{i=2}^m(\theta^T\cdot x^{(i)}-y^{(i)})x_j^{(i)}
 $$
-若我们一次性对所有的参数进行求导，则可得到*梯度向量*(gradient vector) $\nabla_\theta MSE(\theta)$:
+若我们一次性对**所有的参数**进行求导，则可得到*梯度向量*(gradient vector) $\nabla_\theta MSE(\theta)$:
 $$
 \nabla_\theta=\begin{pmatrix}
 \frac{\partial}{\partial \theta_0}MSE(\theta) \\
@@ -109,29 +112,32 @@ $$
 \end{pmatrix}
 =\frac{2}{m}\mathbf{X}^T\cdot (\mathbf{X}\cdot\theta-\mathbf{y})
 $$
-注意到利用这个式子做梯度下降在计算时使用了**整个数据集**。所以，当数据集很大时，批量梯度下降会很慢。
+这个式子使用了**整个数据集**。所以，当数据集很大 (n很大) 时，批量梯度下降会很慢。
 
-利用梯度向量，每次迭代时只需向**梯度方向的反方向**优化即可（$\eta$ 为学习率）：
+迭代时向**梯度方向的反方向**优化（$\eta$ 为学习率）：
 $$
 \theta^{(next\ step)}=\theta - \eta\nabla_\theta MSE(\theta)
 $$
-为了找到合适的学习率，我们可以使用网格搜索（grid search）。另一个比较好平衡计算的方法是**设定较大的迭代次数，但一旦梯度向量小于某个常量则跳出循环**。
+为了找到合适的学习率，我们可以使用**网格搜索**（grid search）。另一个比较好平衡计算的方法是**设定较大的迭代次数，但一旦梯度向量小于某个常量则跳出循环**。
 
 #### 随机梯度下降
 
 *随机梯度下降*在每次迭代过程中只选取训练集中的某一个实例利用式(8) 来计算梯度并完成更新。
 
-但随机梯度下降的**问题**是：它每次迭代代价函数都有可能走高或走低，**decreasing only on average**. 且当迭代停止是，有可能并不会停在最低点上而是在其附近。
+**问题**：
+
+- **震荡**：每次迭代代价函数都有可能走高或走低，**decreasing only on average**. 
+- 当迭代停止时，有可能并不会停在最低点上而是在其附近。
 
 ![屏幕快照 2018-01-16 20.34.30](../../../Downloads/屏幕快照 2018-01-16 20.34.30.png)
 
-但其**优点**是：当代价函数不规则时，随机梯度下降会帮它跳出局部最小值。
+**优点**：当代价函数不规则时，随机梯度下降会帮它跳出局部最小值。
 
-解决的**办法**就是：逐步减小学习率。这就是**模拟退火**算法：一开始时使用较大的迭代步长（来加快进度和跳出局部最小值），然后不断减小学习率以减小迭代步长，保证算法可以 settle at the global minimum.
+**解决**：逐步减小学习率。这就是**模拟退火**算法：一开始时使用较大的迭代步长（来加快进度和跳出局部最小值），然后不断减小学习率以减小迭代步长，保证算法可以 settle at the global minimum.（用来计算学习率的函数称为*learning schedule*.）
 
-而用来计算学习率的函数就称为*learning schedule*.
+**另一个问题**：选取数据的随机性：有些数据会被选取好几次而**有些数据从来用不到**。
 
-随机梯度下降的**另一个问题**就是其选取数据的随机性：这导致有些数据会被选取好几次而**有些数据从来用不到**。**解决办法**就是每次选取前都**对数据集进行“洗牌”**。
+**解决**：每次选取前都**对数据集进行“洗牌”**。
 
 #### Mini-batch Gradient Descent
 
@@ -141,9 +147,12 @@ Mini-batch gradient descent是前两者的结合：每次选取一个**小的随
 
 当简单的线性模型无法满足要求时，可以考虑**对数据集进行处理**。将数据中的每个特征的**高次项**作为**新的特征**加入到数据中。再利用这些数据来训练一个模型。
 
-除了能够**拟合复杂的模型**之外，多项式回归还可以找到**特征之间的联系**。因为 polynomialFeatures also adds all combinations of features up to the given degree. 利用找到的参数就可以审视数据中特征间的联系。
+**优点**：
 
-但**缺点**就是特征空间**维度爆炸**：*PolynomialFeatures(degree = n)* transforms an array containing *n* features into an array containing $\frac{(n+d)!}{d!n!}$ features.
+- 能够**拟合复杂的模型**；
+- 找到**特征之间的联系**。因为 polynomialFeatures also adds all combinations of features up to the given degree. 利用算得的参数就可以审视数据中特征间的联系。
+
+**缺点**：特征空间**维度爆炸**：*PolynomialFeatures(degree = n)* transforms an array containing *n* features into an array containing $\frac{(n+d)!}{d!n!}$ features.
 
 #### 学习曲线（learning curve）
 
@@ -151,19 +160,23 @@ Mini-batch gradient descent是前两者的结合：每次选取一个**小的随
 
 **欠拟合**：模型在训练集和测试集上表现都不好。
 
-**学习曲线**：判断模型是欠拟合还是过拟合。将**训练集大小**作为自变量，将模型在训练集和测试集上的表现作为函数。**实现**：划分好测试集和训练集。用不同大小的训练集（1到全部）训练模型，然后画出模型在训练集和测试集上的表现。
+**学习曲线**：用于判断模型是欠拟合还是过拟合。将**训练集大小**作为自变量，将模型在训练集和测试集上的表现作为函数。
+
+**实现**：划分好测试集和训练集。用不同大小的训练集（1到全部）训练模型，然后画出模型在训练集和测试集上的表现。
 
 ![屏幕快照 2018-01-20 16.18.53](../../../Downloads/屏幕快照 2018-01-20 16.18.53.png)
 
 上图就是以RMSE为评判标准，不同大小的训练集训练出的模型在训练集和测试集上的表现。
 
-*训练集的错误从0 增加到一定程度就不再增加；测试集错误减少到一定程度也不在减少*。
+(*训练集的错误从0 增加到一定程度就不再增加；测试集错误减少到一定程度也不再减少*。)
 
-上图是一个**欠拟合模型**，因为**测试集和训练集到最终错误都很高**。**注意**到：**欠拟合不在于数据不够**，而在于所选模型的**学习能力**低下或者**所选特征**不好。
+上图是一个**欠拟合模型**：**测试集和训练集到最终错误都很高**。
+
+**注意**：**欠拟合不在于数据不够**，而在于所选模型的**学习能力**低下或者**所选特征**不好。
 
 ![overfitting_learning_curves_plot](../../../Downloads/overfitting_learning_curves_plot.png)
 
-而这幅图是个**过拟合模型**，训练集和测试集的RMSE 够低，但是**二者之间有巨大的差距**，说明模型在训练集上表现很好但在测试集上表现很差。
+而这幅图是个**过拟合模型**：训练集和测试集的RMSE 够低，但是**二者之间有巨大的差距**。说明模型在训练集上表现很好但在测试集上表现很差。
 
 下面这幅图就是选用了对的模型，**因为训练集和测试集的误差都足够小且差距不大**。
 
@@ -171,17 +184,31 @@ Mini-batch gradient descent是前两者的结合：每次选取一个**小的随
 
 ## 正则化线性回归
 
-减轻过拟合的方法之一就是**引入正则化项**：自由度越低，模型越难以过拟合。对于线性模型，**正则化会限制模型的权重**。
+减轻过拟合的方法之一就是**引入正则化项**：自由度越低，模型越难以过拟合。
+
+线性模型：**正则化会限制模型的权重**。
 
 ### 岭回归（Ridge Regression）
 
-岭回归的对代价函数加上了一个正则化项$\alpha\sum_{i=1}^n\theta_i^2$。这就要求模型不仅要拟合数据，还要**尽力减小权重向量的大小**。**注意**：正则化项只在**训练**的时候加入到代价函数中。而$\alpha$ 由**用户定义**，来**控制正则化程度**，为0 则为普通的线性模型。
+岭回归的对代价函数加上了一个正则化项$\alpha\sum_{i=1}^n\theta_i^2$。则
 
-代价函数为：
+- 模型不仅要拟合数据，
+- 还要**尽力减小权重向量的大小**。
+
+**注意**：
+
+- 正则化项只在**训练**的时候加入到代价函数中。
+- $\alpha$ 由**用户定义**，来**控制正则化程度**。(为0 则为普通的线性模型。)
+
+代价函数：
 $$
 J(\theta)=MSE(\theta)+\alpha\frac{1}{2}\sum\limits_{i=1}^n\theta_i^2
 $$
-注意到bias term $\theta_0$ **不参与正则化**。令$\omega=[\theta_1, \theta_2,\ \ldots,\theta_n]$，正则化项就是$\omega$ 的l~2~ 范数 (l~2~ norm)。若要执行**批量梯度下降**，对式(9) 加入$\alpha\omega$ 即可。对于**随机梯度下降**，剃度为：
+**注意**：bias term $\theta_0$ **不参与正则化**。
+
+令$\omega=[\theta_1, \theta_2,\ \ldots,\theta_n]$，正则化项就是$\omega$ 的**l~2~ 范数** (l~2~ norm)。
+
+若要执行**批量梯度下降**，对式(9) 加入$\alpha\omega$ 即可。对于**随机梯度下降**，剃度为：
 $$
 gradient=2\mathbf{x}_i^T(\mathbf{x}_i^T\theta - y_i)+\alpha\theta_i
 $$
@@ -191,11 +218,13 @@ $$
 $$
 其中，$\mathbf{A}$ 为第一个元素为零的n*n 大小的单位矩阵。
 
-**NOTE**：在进行正则化之前，必须**scale the data**（调整数据对尺度）.
+**注意**：在进行正则化之前，必须**scale the data**（调整数据对尺度）.
 
 ### Lasso
 
-Lasso 回归利用了模型参数向量的l~1~ 范数。其代价函数为：
+Lasso 回归利用了模型参数向量的**l~1~ 范数**。
+
+代价函数：
 $$
 J(\theta)=MSE(\theta)+\alpha\sum\limits_{i=1}^n|\theta_i|
 $$
@@ -208,14 +237,16 @@ $$
 
 ### Elastic Net
 
-Elastic Net 是岭回归和Lasso 的**结合**。其正则化项是模型权重系数l~1~ 范数和l~2~ 范数的**混合**且可以控制其混合率r。代价函数为：
+Elastic Net 是岭回归和Lasso 的**结合**。正则化项是模型权重系数l~1~ 范数和l~2~ 范数的**混合**且可以控制其混合率r。
+
+代价函数：
 $$
 J(\theta)=MSE(\theta)+r\cdot\alpha\sum\limits_{i=1}^n|\theta_i|+\frac{1-r}{2}\alpha\sum\limits_{i=1}^n\theta_i^2
 $$
 
 ### 早停
 
-另一个避免过拟合的方法是**早停**：当测试集的错误率取得最小值时停止迭代训练。
+另一个避免过拟合的方法是**早停**：当**测试集**的错误率取得最小值时停止迭代。
 
 ![屏幕快照 2018-01-20 17.53.48](../../../Downloads/屏幕快照 2018-01-20 17.53.48.png)
 
@@ -223,17 +254,17 @@ $$
 
 ## 对数几率回归
 
-线性模型虽简单，却有丰富的变化。譬如说，假设我们认为示例所对应的输出标记是在指数尺度上变化，那就可将输出标记的对数作为线性模型逼近的目标， 即
+线性模型虽简单，却有丰富的变化。假设示例所对应的**输出标记**是在**指数尺度**上变化，那就可将输出标记的对数作为线性模型逼近的目标， 即
 $$
 ln\ y=\mathbf{\omega}^T \mathbf{x}+b
 $$
 这就是*对数线性回归*（log-linear regression）。
 
-更一般地，考虑单调可微函数 g，令 $y=g^{-1}(\mathbf{\omega}^T \mathbf{x} + b)$. 即可得到*广义线性模型*（generalized linear model）。而 g 称为*联系函数*（link function）。
+更一般地，考虑单调可微函数 g，令 $y=g^{-1}(\mathbf{\omega}^T \mathbf{x} + b)$ ，即可得到**广义线性模型**（generalized linear model）。g 称为*联系函数*（link function）。
 
-普通线性模型用于**回归**。若要进行**分类**任务，则可利用广义线性模型：利用一个**单调可微**的函数将真实标记y 和线性回归模型的预测值联系起来。
+普通线性模型用于**回归**。要进行**分类**任务，则可利用广义线性模型：利用一个**单调可微**的函数将真实标记y 和线性回归模型的预测值联系起来。
 
-考虑二分类任务，显然，输出标记$y \in \{0, 1\}$. 而线性模型的预测值z 是一个实值。所以我们需要将实值z 转换为0/1 值。最理想的当然是**单位阶跃函数**。
+考虑二分类任务，输出标记$y \in \{0, 1\}$. 而预测值z 是一个实值。则需要将实值z 转换为0/1 值。最理想的是**单位阶跃函数**。
 $$
 y =
 \begin{cases}
@@ -242,19 +273,23 @@ y =
 1, & z > 0
 \end{cases}
 $$
-但显然，阶跃函数时不连续的，所以不能作为$g^-(\cdot)$。所以我们需要找到一个单调可微的*替代函数*，**对数几率函数**（logistic function）正是这样一个函数。从下图可以看出，对数几率函数是一个Sigmoid函数（即S 型函数）。
+阶跃函数不连续，不能作为$g^-(\cdot)$。
+
+需要找到一个单调可微的*替代函数*，**对数几率函数**（logistic function）正是这样一个函数。从下图可以看出，对数几率函数是一个Sigmoid函数（即S 型函数）。
 $$
 y =\frac{1}{1+e^{-z}}=\frac{1}{1+e^{-(\mathbf{\omega^T\mathbf{x}+b})}}
 $$
 ![屏幕快照 2018-01-08 14.22.17](../../../Downloads/屏幕快照 2018-01-08 14.22.17.png)
 
-将上式取对数可得：
+将上式取对数：
 $$
 \ln \frac{y}{1-y}=\mathbf{\omega}^T\mathbf{x}+b
 $$
-将y 视为样本作为正例的可能性，则1 - y 就是其反例的可能性。二者的比值就是几率。对它取对数就是对数几率。
+*将y 视为样本作为正例的可能性，则1 - y 就是其反例的可能性。二者的比值就是几率。对它取对数就是对数几率*。
 
-所以式9 是用线性回归模型的预测结果取逼近真实标记的对数几率，因此其对应的模型称为**对数几率回归**或**逻辑回归**。这种方法有很多**优点**：
+所以式(20) 是**用线性回归模型的预测结果取逼近真实标记的对数几率**，因此其对应的模型称为**对数几率回归**或**逻辑回归**。
+
+**优点**：
 
 - 它是对**分类可能性**进行建模，无需事先假设数据分布，避免了分布不准确带来的问题；
 - 它不是仅预测出“类别”，而是得到**近似概率预测**；
@@ -262,7 +297,7 @@ $$
 
 ### 求解
 
-将式9 中的y 视为类后验概率估计$p(y=1\ |\ \mathbf{x})$, 就可以将式10 重写为
+将式(19) 中的y 视为类后验概率估计$p(y=1\ |\ \mathbf{x})$, 就可以将式(20) 重写为
 $$
 \ln \frac{p(y=1|\ \mathbf{x})}{p(y=0|\ \mathbf{x})}=\mathbf{\omega}^T\mathbf{x}+b
 $$
@@ -273,15 +308,20 @@ p(y=1\ |\ \mathbf{x})=\frac{e^{\mathbf{\omega}^T\mathbf{x}+b}}{1+e^{\mathbf{\ome
 p(y=0\ |\ \mathbf{x})=\frac{1}{1+e^{\mathbf{\omega}^T\mathbf{x}+b}}
 \end{align}
 $$
-我们可以通过**极大似然法**（maximum likelihood）来对参数进行估计。给定数据集$\{(\mathbf{x}_i,\ y_i)\}^m_{i=1}$, 对率回归模型最大化*对数似然*：
+利用**极大似然法**（maximum likelihood）来对参数进行估计。给定数据集$\{(\mathbf{x}_i,\ y_i)\}^m_{i=1}$, 对率回归模型最大化*对数似然*：
 $$
-l(\mathbf{\omega},b)=\sum\limits_{i=1}^m\ln p(y_i|\ \mathbf{x};\ \mathbf{\omega},b)即**令每个样本属于其真实标记的概率越大越好**。记$\mathbf{\beta}=(\mathbf{\omega};b),\hat{\mathbf{x}}=(\mathbf{x};\ 1)$, z 就可以写成$\mathbf{\beta}^T \hat{\mathbf{x}}$. 式10 中的似然项可以写成
+l(\mathbf{\omega},b)=\sum\limits_{i=1}^m\ln p(y_i|\ \mathbf{x};\ \mathbf{\omega},b)
 $$
+即**令每个样本属于其真实标记的概率越大越好**。
+
+记$\mathbf{\beta}=(\mathbf{\omega};b),\hat{\mathbf{x}}=(\mathbf{x};\ 1)$, z 就可以写成$\mathbf{\beta}^T \hat{\mathbf{x}}$. 式10 中的似然项可以写成
+
+
 $$
 p(y_i|\ \mathbf{x};\ \mathbf{\omega},b)=y_ip_1(\hat{\mathbf{x}}_i;\mathbf{\beta})+(1-y_i)p_0(\hat{\mathbf{x}}_i;\mathbf{\beta})
 $$
-将式15 代入式14，并根据式12 和13 可知，最大化式14 等价于最小化
+将式(25) 代入式(24)，并根据式(22) 和(23) 可知，最大化式(24) 等价于最小化
 $$
 l(\mathbf{\beta})=\sum\limits_{i=1}^m(-y_i\mathbf{\beta}^T\hat{\mathbf{x}}_i+\ln(1+e^{\mathbf{\beta}^T \hat{\mathbf{x}}_i})
 $$
-式16 是关于$\mathbf{\beta}$ 的高阶**可导连续凸函数**，可以根据*凸优化理论*求解。
+式(26) 是关于$\mathbf{\beta}$ 的高阶**可导连续凸函数**，可以根据*凸优化理论*求解。
