--- a/SLAM/李群和李代数.md
+++ b/SLAM/李群和李代数.md
@@ -245,7 +245,107 @@ $$
 
 ### 李代数求导模型
 
+假设空间点$\mathbf{p}$ 进行了一次矩阵表示为$\mathbf{R}$ 的旋转，得到了$\mathbf{R}\mathbf{p}$。要计算**旋转后**的点的坐标相对于旋转的导数，可以不严谨的写为：
+$$
+\frac{\partial(\mathbf{R}\mathbf{p})}{\partial\mathbf{R}}
+$$
+前面提到，SO(3)没有加法，所以上式无法按照导数的定义进行计算。设$\mathbf{R}$ 对应的李代数为$\phi$，就可以写成：
+$$
+\frac{\partial(\exp(\phi^\wedge)\mathbf{p})}{\partial\phi}
+$$
+按照导数的定义展开，并在推导中利用BCH 公式和一阶泰勒展开，可以得到下式：
+$$
+\frac{\partial(\exp(\phi^\wedge)\mathbf{p})}{\partial\phi}=\lim_{\delta\phi\to0}\frac{\exp((\phi+\delta\phi)^\wedge)\mathbf{p}-\exp(\phi^\wedge)\mathbf{p}}{\delta\phi}=-(\mathbf{R}\mathbf{p})^\wedge\mathbf{J}_l
+$$
+这个公式是直接对旋转矩阵$\mathbf{R}$ 进行求导，最后的结果中含有左雅可比矩阵$\mathbf{J}_l$。
+
 ### 扰动模型
 
+另一种方法就是先对旋转矩阵$\mathbf{R}$ 进行一次扰动$\Delta\mathbf{R}$，然后直接对这个扰动进行求导。这里以左乘扰动模型为例。设左扰动的李代数为$\varphi$，直接对$\varphi$（而不是$\mathbf{R}$）进行求导：
+$$
+\frac{\partial(\mathbf{R}\mathbf{p})}{\partial\varphi}=\lim_{\varphi\to 0}\frac{\exp(\varphi^\wedge)\exp(\phi^\wedge)\mathbf{p}-\exp(\phi^\wedge)\mathbf{p}}{\varphi}=-(\mathbf{R}\mathbf{p})^\wedge
+$$
 
+
+和李代数求导模型进行对比，最明显的就是式(37) 少了左雅可比矩阵$\mathbf{J}_l$。在扰动模型中，我们把小量$\Delta\mathbf{R}$ 先直接乘在了李群上，然后再对这个小量的李代数进行求导。而在李代数求导模型中，我们是把这个小量$\delta\phi$ 加在了李代数上，然后直接对对应的李代数进行求导。因此在所得的结果中就会有一个表示李群和李代数**运算间关系**（不是转换关系）的左雅可比矩阵$\mathbf{J}_l$。
+
+### SE(3) 上的扰动模型
+
+假设某空间点$\mathbf{p}$ 经过了一次变换$\mathbf{T}$，对应的李代数为$\xi$，得到了$\mathbf{T}\mathbf{p}$。给$\mathbf{T}$ 左乘一个微小扰动$\Delta\mathbf{T}$，扰动项的李代数为$\delta\xi=[\delta\rho,\delta\phi]^T$。则有：
+$$
+\frac{\partial(\mathbf{T}\mathbf{p})}{\partial\delta\xi}=\lim_{\delta\xi\to0}\frac{\exp(\delta\xi^\wedge)\exp(\xi^\wedge)\mathbf{p}-\exp(\xi^\wedge)\mathbf{p}}{\delta\xi}=
+\begin{bmatrix}
+\mathbf{I}_{3\times3} & -(\mathbf{R}\mathbf{p}+\mathbf{t})^\wedge_{3\times3} \\
+\mathbf{0}^T_{1\times3} & \mathbf{0}^T_{1\times3}\\
+\end{bmatrix}=(\mathbf{T}\mathbf{p})^\bigodot
+$$
+最后的结果被定义为符号$^\bigodot$ 的一个运算：把一个齐次坐标下的空间点变换成一个4*6 的矩阵。
+
+### 相似变换及其李群和李代数
+
+最后介绍下单目SLAM中会用到的相似变换群Sim(3)。由于单目视觉中存在一个尺度不确定性（简单说，把单目相机两次拍照的两张相片想象成双目相机一次拍的两张照片，这两次拍照中单目相机的位移（对应于双目中的基线）是不知道的，导致了在像素深度估计上的尺度不确定），因此在单目的情况下，需要把尺度因子**显式**表达出来。就由欧式变换到了相似变换。
+
+设空间点为$\mathbf{p}$，相似变换为：
+$$
+\mathbf{p}^\prime=
+\begin{bmatrix}
+s\mathbf{R} & \mathbf{t} \\
+\mathbf{0}^T & 1\\
+\end{bmatrix}=s\mathbf{R}\mathbf{p} + \mathbf{t}
+$$
+这里，s 就是尺度因子，它相当于对p 进行了一次缩放。
+
+显然，相似变换也对矩阵乘法构成群，称为相似变换群：
+$$
+Sim(3)=
+\begin{Bmatrix}
+\mathbf{S}=
+\begin{bmatrix}
+s\mathbf{R} & \mathbf{t} \\
+\mathbf{0}^T & 1\\
+\end{bmatrix} \in R^{4\times4}
+\end{Bmatrix}
+$$
+它对应的李代数为sim(3)，是一个7维向量：前六维就是se(3)，最后一项为尺度因子$\sigma$。
+$$
+sim(3)=
+\begin{Bmatrix}
+\zeta\ |\ \zeta=
+\begin{bmatrix}
+\mathbf{\rho} \\
+\mathbf{\phi} \\
+\mathbf{\sigma}
+\end{bmatrix} \in R^7,\ 
+\zeta^\wedge=
+\begin{bmatrix}
+\sigma\mathbf{I}+\phi^\wedge & \mathbf{\rho} \\
+\mathbf{0}^T & 0\\
+\end{bmatrix} \in R^{4\times4}
+\end{Bmatrix}
+$$
+二者间仍然是通过指数映射和对数映射相关联。指数映射为：
+$$
+\exp(\zeta^\wedge)=
+\begin{bmatrix}
+e^\sigma\exp(\phi^\wedge) & \mathbf{J}_s\mathbf{rho} \\
+\mathbf{0}^T & 1 \\
+\end{bmatrix}
+$$
+其中，
+$$
+\mathbf{J}_s=\frac{e^\sigma -1}{\sigma}\mathbf{I}+\frac{\sigma e^\sigma \sin\theta+(1-e^\sigma\cos\theta)\theta}{\sigma^2+\theta^2}\mathbf{a}^\wedge+(\frac{e^\sigma -1}{\sigma}-\frac{(e^\sigma \cos\theta-1)\sigma+(e^\sigma \sin\theta)\theta}{\sigma^2+\theta^2})\mathbf{a}^\wedge\mathbf{a}^\wedge
+$$
+可以看到，相似变换的雅可比矩阵远比前面的复杂。而对数映射可以写为：
+$$
+s=e^\sigma,\ \mathbf{R}=\exp(\phi^\wedge),\ \mathbf{t}=\mathbf{J}_s\mathbf{\rho}
+$$
+同样地，Sim(3) 也具有BCH 近似公式，也有李代数倒数模型和扰动模型。这里我们介绍扰动模型。给$\mathbf{S}\mathbf{p}$ 左乘一个微小扰动$\exp(\zeta^\wedge)$ 并对该微小扰动求导，记$\mathbf{S}\mathbf{p}$ 的前三维坐标为q，有
+$$
+\frac{\partial(\mathbf{S}\mathbf{p})}{\partial\zeta}=
+\begin{bmatrix}
+\mathbf{I}_{3\times3} & -\mathbf{q}^\wedge_{3\times3} & \mathbf{q}_{3\times1} \\
+\mathbf{0}^T_{1\times3} & \mathbf{0}^T_{1\times3} & 0\\
+\end{bmatrix}
+$$
+显然，$\mathbf{S}\mathbf{p}$ 是一个4维齐次坐标，$\zeta$ 是一个7维向量。该导数就是一个4*7 大小的雅可比矩阵。
 
