--- a/SLAM/李群和李代数.md
+++ b/SLAM/李群和李代数.md
@@ -18,7 +18,7 @@ $$
 
 1. 封闭性：$\forall a_1,a_2 \in \mathbf{A},\  a_1 \cdot a_2 \in \mathbf{A}$
 2. 结合律：$\forall a_1,a_2,a_3 \in \mathbf{A},\  (a_1 \cdot a_2) \cdot a_3 = a_1\cdot (a_2 \cdot a_3)$
-3. 幺元：$\exists a_0 in \mathbf{A},\  s.t. \  \forall a \in \mathbf{A}, a_0 \cdot a = a \cdot a_0$
+3. 幺元：$\exists a_0 \in \mathbf{A},\  s.t. \  \forall a \in \mathbf{A}, a_0 \cdot a = a \cdot a_0$
 4. 逆：$\forall a \in \mathbf{A},\exists a^{-1} \in A, \  s.t.\  a \cdot a^{-1}=a_0$
 
 可以验证，旋转矩阵集合和变换矩阵集合分别和矩阵乘法构成群。还有其他很多群，如整数的加法等。**群结构保证了在群上的运算具有良好的性质**。
@@ -29,7 +29,7 @@ $$
 
 前面举的整数的加法的例子显然不是连续的，因而它不是李群。但SO(3) 和SE(3) 在实数空间上是**连续**的（机器人在三维空间中显然是连续地运动，而不会进行“瞬移”）。
 
-介绍完李群，在引入李代数之前，我们来回顾下开头我们提到的问题：为什么要用到李群和李代数？避免一直是数学上的推到。我们用一个比较实际的例子。假设某个时刻我们预测机器人的位姿为$\mathbf{T}$（待定值）, 它观测到了一个惯性坐标系下的点$\mathbf{p}$ 而产生了一个观测数据$\mathbf{z}$，它是该点在相机坐标系下的坐标，则可得
+介绍完李群，在引入李代数之前，我们来回顾下开头我们提到的问题：为什么要用到李群和李代数？避免一直是数学上的推导。我们用一个比较实际的例子。假设某个时刻我们预测机器人的位姿为$\mathbf{T}$（待定值）, 它观测到了一个惯性坐标系下的点$\mathbf{p}$ 而产生了一个观测数据$\mathbf{z}$，它是该点在相机坐标系下的坐标，则可得
 $$
 \mathbf{z}=\mathbf{T}\mathbf{p}+\mathbf{\omega}
 $$
@@ -41,7 +41,7 @@ $$
 $$
 \mathop{\min}_{T} J(\mathbf{T})=\sum\limits^N_{i=1}||\mathbf{z}_i-\mathbf{T}\mathbf{p}_i||^2_2
 $$
-通常，直接求解上式得出最优的$\mathbf{T}$是很困难的（或计算量很大）。我们常常先给定一个猜测值（初始值）$\mathbf{T}_0$，然后不断地对它进行迭代更新。而这个过程需要用到导数（可以想想梯度下降法）。回顾导数的定义，$\dot{f(x)}=\lim_{\Delta x \to 0} \frac{f(x+\Delta x)}{\Delta x}$。显然计算导数和进行更新时都要用到加法。但SO(3) 和SE(3) 上对矩阵加法的运算并不封闭。如果要继续采取这个迭代更新的策略势必要再想想办法，使得导数“可行”。而这就可以通过李群及其对应的李代数来实现。
+通常，直接求解上式得出最优的$\mathbf{T}$ 是很困难的（或计算量很大）。我们常常先给定一个猜测值（初始值）$\mathbf{T}_0$，然后不断地对它进行迭代更新。而这个过程需要用到导数（可以想想梯度下降法）。回顾导数的定义，$\dot{f(x)}=\lim_{\Delta x \to 0} \frac{f(x+\Delta x)-f(x)}{\Delta x}$。显然计算导数和进行更新时都要用到加法。但SO(3) 和SE(3) 上对矩阵加法的运算并不封闭。如果要继续采取这个迭代更新的策略势必要再想想办法，使得导数“可行”。而这就可以通过李群及其对应的李代数来实现。
 
 ## 李代数
 
@@ -101,7 +101,7 @@ $$
 
 ### 李代数的定义
 
-每个李群都有与之对应的李代数。**李代数描述了李群的局部性质**。其**定义**为：李代数由一个集合$V$, 一个数域$F$ 和一个二元运算$[,]$, 组成。如果它们满足以下几条性质，则称$(V, F, [,])$, 记作g。
+每个李群都有与之对应的李代数。**李代数描述了李群的局部性质**。其**定义**为：李代数由一个集合$V$, 一个数域$F$ 和一个二元运算$[,]$, 组成。如果它们满足以下几条性质，则称$(V, F, [,])$为一个李代数，记作g。
 
 - 封闭性：$\forall \mathbf{X}, \mathbf{Y} \in V,\ [\mathbf{X}, \mathbf{Y}] \in V$.
 - 双线性：$\forall \mathbf{X}, \mathbf{Y}, \mathbf{Z} \in V,\ a, b \in F$, 有$[a\mathbf{X}+b\mathbf{Y},\ \mathbf{Z}]=a[\mathbf{X}, \mathbf{Z}]+[\mathbf{Y}, \mathbf{Z}],\ [\mathbf{Z},a\mathbf{X}+b\mathbf{Y}]=a[\mathbf{Z},\mathbf{X}]+b[\mathbf{Z},\mathbf{Y}]$
@@ -130,7 +130,7 @@ $$
 $$
 se(3)=\begin{Bmatrix}
 \mathbf{\xi}=\begin{bmatrix} \mathbf{\rho} \\ \mathbf{\phi} \end{bmatrix} \in R^6,\mathbf{\rho} \in R^3, \mathbf{\phi} \in so(3), \mathbf{\xi}^\wedge=\begin{bmatrix}\phi^\wedge & \mathbf{\rho} \\ \mathbf{0}^T & 0 \end{bmatrix} \in R^{4 \times 4}
-\end{Bmatrix} 
+\end{Bmatrix}
 $$
 把每个se(3) 元素记做$\xi$，它是一个六维向量：前三维为平移，记作$\rho$；后三维是旋转，记作$\phi$，实质上是s0(3) 元素。此外，在se(3) 中，$^\wedge$ 符号的含义被拓展了：这里它将一个六维向量转换为四维矩阵，但这里不再表示反对称矩阵。
 
@@ -175,7 +175,7 @@ $$
 \mathbf{0}^T & 1 \\
 \end{bmatrix}=\mathbf{T}
 $$
-显然，$\exp(\xi^\wedge)$ 的左上角是SO(3) 中的元素$\mathbf{R}$，是其旋转部分。而矩阵$\mathbf{J}$ 则为：
+$\exp(\xi^\wedge)$ 的左上角是SO(3) 中的元素$\mathbf{R}$，是其旋转部分。而矩阵$\mathbf{J}$ 则为：
 $$
 \mathbf{J}=\frac{\sin\theta}{\theta}\mathbf{I}+(1-\frac{\sin\theta}{\theta})\mathbf{a}\mathbf{a}^T+\frac{1-\cos\theta}{\theta}\mathbf{a}^\wedge
 $$
@@ -191,7 +191,7 @@ $$
 
 ###李群和李代数在计算上的对应关系
 
-至此，我们已经介绍完了李群号李代数还有它们之间的对应关系。但最后还有一个问题。我们知道，对于两次连续的旋转可以用矩阵乘法来描述，但用李代数如何表示呢？我们自然是希望李群中两个矩阵相乘对应李代数上对应元素的相加，这样我们才能够利用加法来计算导数和进行更新。但很遗憾，这是不成立的。
+至此，我们已经介绍完了李群和李代数还有它们之间的对应关系。但最后还有一个问题。我们知道，对于两次连续的旋转可以用矩阵乘法来描述，但用李代数如何表示呢？我们自然是希望李群中两个矩阵相乘对应李代数上对应元素的相加，这样我们才能够利用加法来计算导数和进行更新。但很遗憾，这是不成立的。
 
 两个李代数指数映射的乘积，由BCH 公式给出：
 $$
@@ -236,7 +236,7 @@ $$
 \exp(\xi^\wedge)\exp(\Delta\xi^\wedge)\approx\exp((\cal{J}_r^{-1}\Delta\xi+\xi)^\wedge)
 \end{align}
 $$
-这里$\cal{J}$ 是一个6*6 的矩阵，形式较为复杂且在实际计算中并不用到改矩阵，所以略去其具体形式。
+这里$\cal{J}$ 是一个6*6 的矩阵，形式较为复杂且在实际计算中并不用到矩该阵，所以略去其具体形式。
 
 回顾介绍李群时举的那个例子。现在我们有了李代数，which 具有良好的加法运算。因此，我们可以用它来解决求导问题了。具体的**思路**有两种：
 
@@ -261,7 +261,7 @@ $$
 
 ### 扰动模型
 
-另一种方法就是先对旋转矩阵$\mathbf{R}$ 进行一次扰动$\Delta\mathbf{R}$，然后直接对这个扰动进行求导。这里以左乘扰动模型为例。设左扰动的李代数为$\varphi$，直接对$\varphi$（而不是$\mathbf{R}$）进行求导：
+另一种方法就是先对旋转矩阵$\mathbf{R}$ 进行一次扰动$\Delta\mathbf{R}$，然后再对个扰动进行求导。这里以左乘扰动模型为例。设左扰动的李代数为$\varphi$，直接对$\varphi$（而不是$\mathbf{R}$）进行求导：
 $$
 \frac{\partial(\mathbf{R}\mathbf{p})}{\partial\varphi}=\lim_{\varphi\to 0}\frac{\exp(\varphi^\wedge)\exp(\phi^\wedge)\mathbf{p}-\exp(\phi^\wedge)\mathbf{p}}{\varphi}=-(\mathbf{R}\mathbf{p})^\wedge
 $$
@@ -347,5 +347,5 @@ $$
 \mathbf{0}^T_{1\times3} & \mathbf{0}^T_{1\times3} & 0\\
 \end{bmatrix}
 $$
-显然，$\mathbf{S}\mathbf{p}$ 是一个4维齐次坐标，$\zeta$ 是一个7维向量。该导数就是一个4*7 大小的雅可比矩阵。
+显然，$\mathbf{S}\mathbf{p}​$ 是一个4维齐次坐标，$\zeta​$ 是一个7维向量。该导数就是一个4*7 大小的雅可比矩阵。
 
