--- a/MachineLearning/3线性模型.md
+++ b/MachineLearning/3线性模型.md
@@ -325,3 +325,19 @@ $$
 l(\mathbf{\beta})=\sum\limits_{i=1}^m(-y_i\mathbf{\beta}^T\hat{\mathbf{x}}_i+\ln(1+e^{\mathbf{\beta}^T \hat{\mathbf{x}}_i})
 $$
 式(26) 是关于$\mathbf{\beta}$ 的高阶**可导连续凸函数**，可以根据*凸优化理论*求解。
+
+### Training and Cost Function
+
+$$
+\hat p=h_\theta(\mathbf{x})=\sigma(\theta^T\cdot \mathbf{x}),\ \sigma(t)=\frac{1}{1+\exp(-t)}
+$$
+
+代价函数：
+$$
+c(\theta)=
+\begin{cases}
+-\log(\hat p),\ y=1,\\
+-\log(1-\hat p),\ y = 0,\\
+\end{cases}
+$$
+该函数利用了$-\log(\hat p)$ 在$\hat p$ 接近0 时数值特别大的特性。对正例来说，y = 1, 若$\hat y = 1$，则$\hat p \ge 0.5 \to 1,\ -\log(\hat p)$ 很小；若$\hat y=0$，则$\hat p < 0.5 \to 0,\ -\log(\hat p)$ 很大。
