--- a/MachineLearning/3线性模型.md
+++ b/MachineLearning/3线性模型.md
@@ -341,3 +341,202 @@ c(\theta)=
 \end{cases}
 $$
 该函数利用了$-\log(\hat p)$ 在$\hat p$ 接近0 时数值特别大的特性。对正例来说，y = 1, 若$\hat y = 1$，则$\hat p \ge 0.5 \to 1,\ -\log(\hat p)$ 很小；若$\hat y=0$，则$\hat p < 0.5 \to 0,\ -\log(\hat p)$ 很大。
+
+整个训练集的代价函数就是上式的平均：
+$$
+J(\theta)=-\frac{1}{m}\sum\limits_{i=1}^{m}[y^{(i)}\log(\hat p^{(i)})+(1-y^{(i)})\log(1-\hat p^{(i)})]
+$$
+该方程**没有闭式解**。但该方程时**凸函数**，所以梯度下降法一定会找到全局最小值。$J(\theta)$ 对于$\theta_j$ 的偏导数为：
+$$
+\frac{\partial}{\partial\theta_j}j(\theta)=\frac{1}{m}\sum\limits_{i=1}^{m}(\sigma(\theta^T\cdot\mathbf{x}^{(i)})-y^{(i)})x_j^{(i)}
+$$
+**解释**：对每个样本该函数（式(20)）先计算其预测误差，然后和第j 个属性值相乘。最后计算整个训练集的平均值。
+
+对于**批量梯度下降**，
+$$
+\nabla_\theta J(\theta)=\frac{1}{m}\mathbf{X}\cdot(\sigma(\mathbf{X}\cdot\theta)-\mathbf{y})
+$$
+对于**随机梯度下降**，
+$$
+grad=\mathbf{x}^{(i)}\cdot(\sigma(\theta^T\cdot \mathbf{x}^{(i)})-y^{(i)})^T
+$$
+
+### Decision Boundary(决策边界)
+
+对于*对数几率函数*，当z = 0 时其为0.5。这里就是它的**决策边界**。
+
+![屏幕快照 2018-01-22 14.52.44](../../../Downloads/屏幕快照 2018-01-22 14.52.44.png)
+
+![屏幕快照 2018-01-22 14.53.11](../../../Downloads/屏幕快照 2018-01-22 14.53.11.png)
+
+注意到正负样本肯能会**穿过边界**但模型**无法给出正确的预测**。
+
+### Softmax Regression
+
+逻辑回归可以**直接**用于**多分类**，称为*Softmax Regression*。
+
+**思想**：给定一个样本$\mathbf{x}$，Softmax regression 为每个类别k 计算一个分数$s_k(\mathbf{x})$。再利用Softmax function (或称为*normalized exponential*) 来计算概率。下式为类别k 的函数：
+$$
+s_k(\mathbf{x})=\theta^T_k\cdot\mathbf{x}
+$$
+
+$$
+\hat p_k=\sigma(s(\mathbf{x}))_k=\frac{\exp(s_k(\mathbf{x}))}{\sum_{j=1}^K\exp(s_j(\mathbf{x}))}
+$$
+
+Softmax regression 将预测类别指定为概率最高，也即得分最高的类别。
+
+#### 训练
+
+**目标**：最大化目标类别的概率。因此，最小化如下代价函数：
+$$
+J(\Theta)=-\frac{1}{m}\sum\limits_{i=1}^m\sum\limits_{k=1}^K y_k^{(i)}\log(\hat p_K^{(i)})
+$$
+上式也称为**交叉熵**（它经常用来衡量估计类别概率和真实类别概率的匹配程度，两个概率分布p 和q 的交叉熵为$H(p,q)=-\sum_xp(x)\log q(x)$）。
+
+**解释**：
+
+- 正确时，$y_k^{(i)}=1$，$\hat p_k^{(i)}$ 也接近于1；此时$\log(\hat p_k^{(i)})$ 从负数轴逼近0，因此cost 很小；
+- 错误时，$y_k^{(i)}=1$，而对应的$\hat p_k^{(i)}$ 也接近于0；此时$-\log(\hat p_k^{(i)})$ 很大，因此cost 很小；
+
+对代价函数求偏导为：
+$$
+\nabla_{\theta_k}J(\Theta)=\frac{1}{m}\sum\limits_{i=1}^m(\hat p_k^{(i)}-y_k{(i)})\mathbf x^{(i)}
+$$
+
+## 线性判别分析
+
+**思想**：给定训练样例集，设法将样例投影到一条直线上，使得**同类样例的投影点尽可能接近**、 异类样例的投影点尽可能远离；在对新样本进行分类时，将其投影到同样的这条直线上，再根据投影点的位置来确定新样本的类别。
+
+![屏幕快照 2018-01-22 15.35.17](../../../Downloads/屏幕快照 2018-01-22 15.35.17.png)
+
+具体**描述**：
+
+给丁数据集$D=\{(\mathbf x_i,y_i\}^m_{i=1},\ y_i\in\{0,\ 1\}$ ，令$\mathbf X_i,\ \mu_i,\ \Sigma_i$ 为第i 类示例的集合、均值向量和协方差矩阵。将数据投影到直线$\omega$ 上，则两类样本的**中心**在直线上的投影为$\omega^T\mu_0$ 和$\omega^T\mu_1$，协方差为$\omega^T\Sigma_0\omega$ 和$\omega^T\Sigma_1\omega$。(直线是一维空间，以上四个皆为实数。)
+
+上面思想的**代数表示**为：$\omega^T\Sigma_0\omega+ \omega^T\Sigma_1\omega$ 尽可能小 (同类接近) 和$||\omega^T\mu_0 - \omega^T\mu_1||$ 尽可能大 (异类相远)。即最大化目标：
+$$
+J=\frac{||\omega^T\mu_0 - \omega^T\mu_1||_2^2}{\omega^T\Sigma_0\omega+ \omega^T\Sigma_1\omega}=\frac{\omega^T(\mu_0-\mu_1)(\mu_0-\mu_1)^T\omega}{\omega^T\Sigma_0\omega+ \omega^T\Sigma_1\omega}
+$$
+定义
+
+- *类内散度矩阵* (within-class scatter matrix)：
+
+$$
+\mathbf S_w=\mathbf\Sigma_0+\mathbf\Sigma_1=\sum_{\mathbf x\in\mathbf X_0}(\mathbf x-\mu_0)(\mathbf x-\mu_0)^T+\sum_{\mathbf x\in\mathbf X_1}(\mathbf x-\mu_1)(\mathbf x-\mu_1)^T
+$$
+
+- *类间散度矩阵* (between-class scatter matrix)：
+
+$$
+\mathbf S_b=(\mu_0-\mu_1)(\mu_0-\mu_1)^T
+$$
+
+式(37) 写为：
+$$
+J=\frac{\omega^T\mathbf S_b\omega}{\omega^T\mathbf S_w\omega}
+$$
+上式也称为**广义瑞利商** (generalized Rayleigh quotient)。
+
+### 求解
+
+式(40) 分子分母都是关于$\omega$ 的二次项，所以**解与其长度无关，只与方向有关**。设$\omega^T\mathbf S_w\omega=1$，式(40) 等价于
+$$
+\min_\omega\ -\omega^T\mathbf S_b\omega\ \ s.t.\ \omega^T\mathbf S_w\omega=1
+$$
+拉格朗日乘子法：
+$$
+\mathbf S_b\omega=\lambda\mathbf S_w\omega
+$$
+**注意**到$\mathbf S_b\omega$ 的**方向**恒为$\mu_0-\mu_1$，可有
+$$
+\mathbf S_b\omega=\lambda(\mu_0-\mu_1)
+$$
+代入式(42) 可得
+$$
+\omega=\mathbf S_w^{-1}(\mu_0-\mu_1)
+$$
+**考虑数值求逆的稳定性**，可用**奇异值分解**来求逆。可证明，当两类数据同先验、满足高斯分布且协方差相等时， LDA可达到最优分类。
+
+### 多分类任务
+
+假定存在N 个类，且第i 个类示例数为m~i~。
+
+定义：
+
+- *类间全局散度矩阵* ($\mu$ 为**所有**示例的均值向量)：
+
+$$
+\mathbf S_t=\mathbf S_b+\mathbf S_w = \sum\limits_{i=1}^m(\mathbf x_i-\mu)(\mathbf x_i-\mu)^T
+$$
+
+- *类内全局散度矩阵*：
+
+$$
+\mathbf S_w=\sum\limits_{i=1}^N\mathbf S_{w_i},\mathbf S_{w_i}=\sum\limits_{\mathbf x\in\mathbf X_i}(\mathbf x_i-\mu)(\mathbf x_i-\mu)^T
+$$
+
+由上两式可得
+$$
+\mathbf S_b=\mathbf S_t - \mathbf S_w=\sum\limits_{i=1}^N m_i(\mu_i-\mu)(\mu_i-\mu)^T
+$$
+显然，多分类 LDA 有多种实现方法：使用$\mathbf S_b,\ \mathbf S_w,\ \mathbf S_t$ 三者中的任何两个即可。**常用**优化
+$$
+\max_\mathbf W\frac{tr(\mathbf W^T\mathbf S_b\mathbf W)}{tr(\mathbf W^T\mathbf S_w\mathbf W)}
+$$
+其中$\mathbf W \in R^{d\times(N-1)}$。可用广义特征值问题求解：
+$$
+\mathbf S_b\mathbf W=\lambda\mathbf S_w\mathbf W
+$$
+则$\mathbf W$ 的闭式解时$\mathbf S_w^{-1}\mathbf S_b$ 的N - 1 个最大广义特征值所对应的特征向量组成的矩阵。
+
+若将 $\mathbf W$ 视为一个投影矩阵，则多分类 LDA 将样本投影到 N-1 维空间， N-1 通常**远小于数据原有的属性数**。于是，可通过这个投影来**减小样本点的维数**，且投影过程中使用了类别信息，因此LDA也常被视为一种经典的监督降维技术。
+
+## 多分类学习
+
+考虑 N 个类别 C~1~，C~2~，… ，C~N~ ， 多分类学习的**基本思路**是**拆解法**，即将多分类任务拆为若干个二分类任务求解。
+
+**拆分策略**
+
+- 一对一（OvO）：将N 个类别**两两配对**，从而产生 N(N - 1) / 2 个二分类任务。测试时新样本提交给**所有**分类器，得到N(N - 1) / 2 个分类结果，最终结果通过投票产生：把被预测得最多的类别作为最终分类结果；
+- 一对多（OvR）：每次将一个类的样例作为正例、**所有其他类**的样例作为反例来训练 N 个分类器.
+
+![屏幕快照 2018-01-22 16.52.28](../../../Downloads/屏幕快照 2018-01-22 16.52.28.png)
+
+- 多对多（MvM）：每次将若干个类作为正类，若干个其他类作为反类。OvO 和 OvR 是 MvM 的特例。MvM 的正、反类构造必须有**特殊的设计**。**常用技术**：*纠错输出码* (Error Correcting output Codes, ECOC)。**步骤**：
+
+  - 编码：对 N 个类别做 M 次划分， 每次划分将一部分类别划为正类，一部分划为反类，形成一个二分类训练集；这样一共产生 M 个训练集，可训练出 M 个分类器；
+  - 解码：:M 个分类器分别对测试样本进行预测，这些预测标记组成一个编码。将这个预测编码与每个类别各自的编码进行比较，返回其中距离最小的类别作为最终预测结果。
+
+  对同等长度的编码，理论上来说，任意两个类别之间的编码距离越远，则**纠错能力越**强。
+
+  ![屏幕快照 2018-01-22 16.56.52](../../../Downloads/屏幕快照 2018-01-22 16.56.52.png)
+
+## 类别不平衡
+
+*类别不平衡* (class-imbalance) 就是指分类任务中不同类别的训练样例数目差别很大的情况。
+
+利用几率函数来说明，几率y / (1-y) 反映了正例可能性与反例可能性之比，y 的阔值设置为0.5 恰表明分类器认为真实正、反例可能性相同。
+$$
+\frac{y}{1-y}>1\ \ 则为正例
+$$
+然而，当训练集中正、反例的数目不同时，令 m^+^表示正例数目， m^-^表示反例数目，则观测几率是m^+^ / m^-^，由于通常假设**训练集是真实样本总体的无偏采样**。观测几率就代表了真实几率。于是，只要分类器的**预测几率高于观测几率**就应判定为正例：
+$$
+\frac{y}{1-y}>\frac{m^+}{m^-} \ \ 则为正例
+$$
+但分类器依据式(50) 进行决策。因此需要对预测值进行调整：
+$$
+\frac{y^\prime}{1-y^\prime}=\frac{y}{1-y}\cdot\frac{m^-}{m^+}
+$$
+即**再缩放**或**再平衡** (rescaling) 策略。
+
+三类做法：
+
+1. 直接对训练集里的反类样例进行**欠采样** (undersampling) ，即去除一些反例使得正、反例数日接近，然后再进行学习；
+2. 对训练集里的正类样例进行**过来样** (oversampling) ，即增加一些正例使得正、反例数目接近，然后再进行学习；
+3. 直接基于原始训练集进行学习，但在用训练好的分类器进行预测时，将式(52) 嵌入到其决策过程中，称为**阔值移动** (threshold-moving)。
+
+**NOTE**：
+
+- 过采样法不能简单地对初始正例样本进行重复来样，否则会招致严重的**过拟合**，一般使用**插值**。
+- 欠采样法若随机丢弃反例可能**丢失重要信息**；其代表性算法是利用**集成学习**机制，将反例划分为若干个集合供不同学习器使用，这样对每个学习器来看都进行了欠采样，但在全局来看却不会丢失重要信息。
